[tool.poetry]
name = "fastapi-study"
version = "0.1.0"
description = ""
authors = ["sucream <sucream@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_study"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
