[tool.poetry]
name = "fastapi-study"
version = "0.1.0"
description = ""
authors = ["sucream <sucream@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_study"}]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# log_file = "pytest.log"
# log_file_level = "DEBUG"
# log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
# log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-mock = "^3.11.1"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
